- Fixed nvapi datatype definition for NvS32 and NvU32
- Fixed WPA/WPA2 cracking in case eapol frame is >= 248 byte
- Fixed string not null terminated inside workaround for checking drm driver path
- Fixed string not null terminated when reading maskfiles
- Fixed pointer to local outside scope when using -j or -k

##
## Technical
##

- Building: Add SHARED variable to Makefile to choose if hashcat is build as static or shared binary (using libhashcat.so/hashcat.dll)
- Building: Removed the use of RPATH on linker level
- Building: Replaced linking of CRT_glob.o with the use of int _dowildcard
- Commandline: Do some checks related to custom-charset options if user specifies them
- CPU Affinity: Fixed memory leak when invalid cpu Id was specified
- Dispatcher: Fixed several memory leaks when an OpenCL error occurs
- Events: Improved the maximum event message handling. event_log () will now also internally make sure that the message is properly terminated
- Files: Do several file and folder checks on startup rather than when they are actually used to avoid related error after eventual intense operations
- Helper: Added functions to check existence, type, read- and write-permissions and rewrite sources to use them instead of stat()
- Hardware Monitor: Fixed several memory leaks when no hardware monitor sensor is found
- OpenCL Device Management: Fixed several memory leaks when initialization of a device/platform failed
- Outfile Check: Fixed a memory leak for failed outfile reads
- Rule Engine: Fixed several memory leaks when loading of rules failed
- Session Management: Fixed several memory leaks when profile/install folder setup failed
- OpenCL Header: Updated CL_* errorcode to OpenCL 1.2 standard
- OpenCL Runtime: Updated AMDGPU-Pro driver version check, do warn if version 16.60 is detected which is known to be broken
- OpenCL Kernel: Renumbered hash-mode 7600 to 4521
- OpenCL Device: Do a check on available constant memory size and abort if it's less than 64kB